@@ -1,5 +1,10 @@
 2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* pychecker/CodeChecks.py:
+	  Implement SLICE0 and YIELD_VALUE.
+
+2009-06-27  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* bin/pychecker:
 	  Adding a script to be used as the pychecker binary when
 	  running uninstalled.
